adicionando mais projetos

--- a/index.html
+++ b/index.html
@@ -29,40 +29,62 @@
             <a class ="button"href="" lang="en">Download CV</a>
         </nav>
     </header>
-    <section class="section">
+    <section class="section_projeto">
         <h2 class="subtitle">Projetos</h2>
-        <div class = "box">
-            <img class="Imagem" src="assets/img/Imagem_Arcade.png" alt="">      
-            <div>
-                <h3 class="text">Battle Royale 2D</h3> 
-                <h3 class="text_area">Um jogo desenvolvido em grupo no segundo semestre da faculdade onde a ideia era desenvolver para um arcade, e meu grupo tivemos a ideia de fazer um battle royale 2D, onde cada jogador nasce em um ponto da ilha e precisa coletar as armas e derrotar o outro antes do gás fechar totalmente</h3>
-            </div>   
-            <div id="buttons">
-                <a class="button" href="">Jogar</a>
-                <a class="button" href="">Codigo</a>  
-            </div>      
+            <div class = "box">
+                <img class="Imagem" src="assets/img/Imagem_Arcade.png" alt="">      
+                <div>
+                    <h3 class="text">Battle Royale 2D</h3> 
+                    <h3 class="text_area">Um jogo desenvolvido em grupo no segundo semestre da faculdade onde a ideia era desenvolver para um arcade, e meu grupo tivemos a ideia de fazer um battle royale 2D, onde cada jogador nasce em um ponto da ilha e precisa coletar as armas e derrotar o outro antes do gás fechar totalmente</h3>
+                </div>   
+                <div id="buttons">
+                    <a class="button" href="https://gabrieltorres.itch.io/arcader">Jogar</a>
+                    <a class="button" href="https://github.com/gabrielctorres/ArcadeRoyale">Codigo</a>  
+                </div>      
+            </div>
+            <div class = "box">
+                <img class="Imagem" src="assets/img/Imagem_Nave.png" alt="">      
+                <div>
+                    <h3 class="text">Bullet Hell</h3> 
+                    <h3 class="text_area">Esse projeto foi desenvolvido por mim e um amigo que fez as artes, ele foi um desafio para mim mesmo, a ideia era ver se eu conseguia desenvolver um projeto jogavel no periodo de ferias da faculdade.</h3>
+                </div>   
+                <div id="buttons">
+                    <a class="button" href="https://gabrieltorres.itch.io/nave">Jogar</a>
+                    <a class="button" href="https://github.com/gabrielctorres/Jogo-da-Nave">Codigo</a>  
+                </div>      
+            </div>
+            <div class = "box">
+                <img class="Imagem" src="assets/img/Imagem_Adventure.png" alt="">      
+                <div>
+                    <h3 class="text">Incremental Game</h3> 
+                    <h3 class="text_area">Desenvolvido no quarto semestre da faculdade, o projeto precisava ser para mobile e educativo então eu e meu grupo tivemos a ideia de ensinar a historia em um jogo idle onde o jogador vai passar por cada parte da pré-historia do período paleolítico ate a idade dos metais.</h3>
+                </div>   
+                <div id="buttons">
+                    <a class="button" href="https://gabrieltorres.itch.io/adventure-evolution">Jogar</a>
+                    <a class="button" href="https://github.com/gabrielctorres/AdventureEvolution">Codigo</a>  
+                </div>      
+            </div>
+            <div class = "box">
+                <img class="Imagem" src="assets/img/Imagem_Feriados.png" alt="">      
+                <div>
+                    <h3 class="text">Tower defense</h3> 
+                    <h3 class="text_area">Esse jogo foi desenvolvido para a game jam LIVRE NOEL JAM feito pela Gamux, em stream junto com o meu chat, eles podiam adicionar mecânicas aleatórias e votaram na ideia do jogo baseado em um dos temas da jam que era UM CLÁSSICO DIFERENTE, e assim foi desenvolvido esse tower defense ao contrario onde você controla a wave contra as torres.</h3>
+                </div>   
+                <div id="buttons">
+                    <a class="button" href="https://gabrieltorres.itch.io/guerradosferiados">Jogar</a>
+                    <a class="button" href="https://github.com/gabrielctorres/GuerradosFeriados">Codigo</a>  
+                </div>      
+            </div>
+    </section>
+    <section class="section_skills">
+        <div class="tabela_skills">
+            <h2>Engines</h2>
+            <h3>Unity</h3>
+            <h3>Construct</h3>
         </div>
-        <div class = "box">
-            <img class="Imagem" src="assets/img/Imagem_Nave.png" alt="">      
-            <div>
-                <h3 class="text">Bullet Hell</h3> 
-                <h3 class="text_area">Esse projeto foi desenvolvido por mim e um amigo que fez as artes, ele foi um desafio para mim mesmo, a ideia era ver se eu conseguia desenvolver um projeto jogavel no periodo de ferias da faculdade.</h3>
-            </div>   
-            <div id="buttons">
-                <a class="button" href="">Jogar</a>
-                <a class="button" href="">Codigo</a>  
-            </div>      
-        </div>
-        <div class = "box">
-            <img class="Imagem" src="assets/img/Imagem_Adventure.png" alt="">      
-            <div>
-                <h3 class="text">Incremental Game</h3> 
-                <h3 class="text_area">Desenvolvido no quarto semestre da faculdade, o projeto precisava ser para mobile e educativo então eu e meu grupo tivemos a ideia de ensinar a historia em um jogo idle onde o jogador vai passar por cada parte da pré-historia do período paleolítico ate a idade dos metais.</h3>
-            </div>   
-            <div id="buttons">
-                <a class="button" href="">Jogar</a>
-                <a class="button" href="">Codigo</a>  
-            </div>      
+        <div class="tabela_skills">
+            <h2>Languages</h2>
+            <h3>c#</h3>
         </div>
     </section>
 </body>
