--- a/project.html
+++ b/project.html
@@ -40,11 +40,11 @@
 
             <div class="project-actions">
                 <a href="#" id="project-github-link" class="action-button" target="_blank">
-                    <img src="assets/icons/github.svg" alt="GitHub">
-                    <span>Código no GitHub</span>
+                    <img src="img/icons/github.svg" alt="GitHub">
+                    <span>Código</span>
                 </a>
                 <a href="#" id="project-play-link" class="action-button play-button" target="_blank">
-                    <img src="assets/icons/play.svg" alt="Play">
+                    <img src="img/icons/itchio.svg" alt="Play">
                     <span>Jogar</span>
                 </a>
             </div>
