adicionando projeto recente

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <section id="hero">
             <div class="container">
-                <h1></h1> <!-- Elemento vazio para o efeito -->
+                <h1></h1>
                 <p class="subtitle">Desenvolvedor de Jogos</p>
                 <a href="#projects" class="cta-button">Ver Projetos</a>
             </div>
@@ -39,8 +39,7 @@
                 <h2 class="section-title">Sobre Mim</h2>
                 <div class="about-content">
                     <div class="about-image-container">
-                        <img src="https://placehold.co/400x400/0A1A2F/60A5FA?text=Sua+Foto+Aqui" alt="Gabriel Torres"
-                            class="profile-pic">
+                        <img src="https://placehold.co/400x400/0A1A2F/60A5FA alt=" Gabriel Torres" class="profile-pic">
                     </div>
                     <div class="about-text">
                         <h3>Prazer em conhecê-lo!</h3>
@@ -77,6 +76,35 @@
             </div>
         </section>
 
+        <section id="current-project">
+            <div class="container">
+                <h2 class="section-title">Projeto em Destaque</h2>
+                <div class="current-project-card">
+                    <div class="current-project-content">
+                        <div class="current-project-info">
+                            <h3>Playground Rumble</h3>
+                            <p class="status">Em Desenvolvimento</p>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent
+                                libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum
+                                imperdiet.
+                            </p>
+                            <a href="project.html?id=playground-rumble" class="cta-button learn-more-button">
+                                Saber mais
+                            </a>
+                        </div>
+                        <div class="current-project-media">
+                            <img src="img/projects/rumbleStatic.png" alt="Playground Rumble Game"
+                                class="current-project-image">
+                            <div class="steam-widget-container">
+                                <iframe src="https://store.steampowered.com/widget/2939950/" frameborder="0"
+                                    width="100%" height="190"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section id="projects">
             <div class="container">
                 <h2 class="section-title">Meus Projetos</h2>
