correçao de texto

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                                 Minecraft</strong>
                             e tentando programar plugins em <strong>Java</strong> (não deu muito certo), até que
                             descobri a <strong>Unity</strong>
-                            e me encontrei de vez na programação e na área de games.
+                            e me encontrar de vez na programação e na área de games.
                         </p>
                         <p>
                             Se quiser ver meus projetos, dá uma olhada abaixo e, se curtir,
-                            ajuda lá adicionando <strong><em>Playground Rumble</em> na sua wishlist da Steam!</strong>
+                            ajuda lá adicionando <strong>Playground Rumble</strong> na sua wishlist da Steam!
                         </p>
                         <h4>Principais Ferramentas e Tecnologias:</h4>
                         <ul class="skills-list">
