adicionando conteudo playground rumble

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+<link rel="icon"
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text x='50%' y='55%' font-family='Rubik' font-weight='700' font-size='100' fill='%2360A5FA' text-anchor='middle' dominant-baseline='middle'>G</text></svg>">
 
 <head>
     <meta charset="UTF-8">
@@ -12,7 +14,11 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo">Gabriel Torres</div>
+            <div class="logo">
+                <a href="index.html" class="text-logo">
+                    <span class="logo-g">G</span>
+                </a>
+            </div>
             <nav>
                 <a href="https://github.com/" target="_blank" class="icon-button" aria-label="GitHub">
                     <img src="img/icons/github.svg" alt="GitHub">
@@ -24,7 +30,6 @@
             </nav>
         </div>
     </header>
-
     <main>
         <section id="hero">
             <div class="container">
@@ -85,9 +90,8 @@
                             <h3>Playground Rumble</h3>
                             <p class="status">Em Desenvolvimento</p>
                             <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent
-                                libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum
-                                imperdiet.
+                                Junte-se a Miguel e Manuela em uma jornada emocionante para recuperar seus brinquedos
+                                perdidos, enfrentando hordas de brinquedos descontrolados.
                             </p>
                             <a href="project.html?id=playground-rumble" class="cta-button learn-more-button">
                                 Saber mais
