--- a/project.html
+++ b/project.html
@@ -12,7 +12,11 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo"><a href="index.html" style="color: var(--accent-color);">Gabriel Torres</a></div>
+            <div class="logo">
+                <a href="index.html" class="text-logo">
+                    <span class="logo-g">G</span>
+                </a>
+            </div>
             <nav>
                 <a href="https://github.com/" target="_blank" class="icon-button" aria-label="GitHub">
                     <img src="img/icons/github.svg" alt="GitHub">
