Corrigindo vizualizaçao no celular

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h2 class="section-title">Sobre Mim</h2>
                 <div class="about-content">
                     <div class="about-image-container">
-                        <img src="https://placehold.co/400x400/0A1A2F/60A5FA alt=" Gabriel Torres" class="profile-pic">
+                        <img src="https://placehold.co/400x400/0A1A2F/60A5FA" alt="Gabriel Torres" class="profile-pic">
                     </div>
                     <div class="about-text">
                         <h3>Prazer em conhecê-lo!</h3>
@@ -120,7 +120,7 @@
 
     <footer>
         <div class="container">
-            <p>© Gabriel Torres - <span id="currentYear"></span></p>
+            <p>gabrielctorres38@gmail.com</p>
             <div class="social-links-footer">
                 <a href="https://github.com/" target="_blank" class="icon-button" aria-label="GitHub">
                     <img src="img/icons/github.svg" alt="GitHub">
