--- a/project.html
+++ b/project.html
@@ -60,7 +60,7 @@
 
     <footer>
         <div class="container">
-            <p>© Gabriel Torres - <span id="currentYear"></span></p>
+            <p>gabrielctorres38@gmail.com</p>
         </div>
     </footer>
 
