corrigindo erro projeto e adicionando links

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
                 </a>
             </div>
             <nav>
-                <a href="https://github.com/" target="_blank" class="icon-button" aria-label="GitHub">
+                <a href="https://github.com/gabrielctorres" target="_blank" class="icon-button" aria-label="GitHub">
                     <img src="img/icons/github.svg" alt="GitHub">
                 </a>
-                <a href="https://linkedin.com/" target="_blank" class="icon-button" aria-label="LinkedIn">
+                <a href="https://www.linkedin.com/in/gabrielctorres/" target="_blank" class="icon-button"
+                    aria-label="LinkedIn">
                     <img src="img/icons/linkedin.svg" alt="LinkedIn">
                 </a>
                 <a href="img/resume.pdf" target="_blank" class="resume-button">Currículo</a>
@@ -44,7 +45,7 @@
                 <h2 class="section-title">Sobre Mim</h2>
                 <div class="about-content">
                     <div class="about-image-container">
-                        <img src="https://placehold.co/400x400/0A1A2F/60A5FA" alt="Gabriel Torres" class="profile-pic">
+                        <img src="https://github.com/gabrielctorres.png" alt="Gabriel Torres" class="profile-pic">
                     </div>
                     <div class="about-text">
                         <h3>Prazer em conhecê-lo!</h3>
@@ -122,10 +123,11 @@
         <div class="container">
             <p>gabrielctorres38@gmail.com</p>
             <div class="social-links-footer">
-                <a href="https://github.com/" target="_blank" class="icon-button" aria-label="GitHub">
+                <a href="https://github.com/gabrielctorres" target="_blank" class="icon-button" aria-label="GitHub">
                     <img src="img/icons/github.svg" alt="GitHub">
                 </a>
-                <a href="https://linkedin.com/" target="_blank" class="icon-button" aria-label="LinkedIn">
+                <a href="https://www.linkedin.com/in/gabrielctorres/" target="_blank" class="icon-button"
+                    aria-label="LinkedIn">
                     <img src="img/icons/linkedin.svg" alt="LinkedIn">
                 </a>
             </div>
