--- a/project.html
+++ b/project.html
@@ -18,10 +18,11 @@
                 </a>
             </div>
             <nav>
-                <a href="https://github.com/" target="_blank" class="icon-button" aria-label="GitHub">
+                <a href="https://github.com/gabrielctorres" target="_blank" class="icon-button" aria-label="GitHub">
                     <img src="img/icons/github.svg" alt="GitHub">
                 </a>
-                <a href="https://linkedin.com/" target="_blank" class="icon-button" aria-label="LinkedIn">
+                <a href="https://www.linkedin.com/in/gabrielctorres/" target="_blank" class="icon-button"
+                    aria-label="LinkedIn">
                     <img src="img/icons/linkedin.svg" alt="LinkedIn">
                 </a>
                 <a href="img/resume.pdf" target="_blank" class="resume-button">Currículo</a>
