arrumando bug de tag

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     aria-label="LinkedIn">
                     <img src="img/icons/linkedin.svg" alt="LinkedIn">
                 </a>
-                <a href="img/resume.pdf" target="_blank" class="resume-button">Currículo</a>
+                <a href="img/Curriculo Gabriel Torres 01.pdf" target="_blank" class="resume-button">Currículo</a>
             </nav>
         </div>
     </header>
